Split resolve/annotate/findNode into separate modules

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "scopup",
   "version": "0.0.4",
   "description": "Scope analysis of an Mozilla Parser AST (from esprima)",
-  "main": "lib/scopup.js",
+  "main": "index.js",
   "scripts": {
     "test": "mocha test"
   },
